removed files from index

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ vacancies_by_year.csv
 generate_pdf.docx
 graph.png
 report.xlsx
-to_pdf_1.jpg
-to_pdf_2.jpg
+to_pdf_1.png
+to_pdf_2.png
 generate_pdf.pdf
 1.png
 2.png
